# goit-algo2-hw-06

./: README.md  pyproject.toml  task_01.ipynb
